# european-transport-feeds

./: .editorconfig  .gitignore  Dockerfile  code-of-conduct.md  feeds.ndjson  feeds.toml  nginx.conf  readme.md
.github/workflows/: build-and-deploy.yaml  ci.yaml  test.yaml
.kubernetes/: deployment.yaml  ingress.yaml  service.yaml
generate/: Cargo.toml
generate/src/: main.rs
generate/templates/: index.html.mustache  index.md.mustache  map.svg.mustache  nginx.conf.mustache
