[package]
name = "generate"
version = "0.1.0"
authors = ["Julius Tens <mail@juliustens.eu>"]
edition = "2018"
license = "ISC"

[dependencies]
country-emoji = "0.2.0"
mustache = "0.9.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
toml = "0.5.9"
url = { version = "2.2.2", features = ["serde"] }
